Properly configure bootJar and bootRun tasks